--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "POC for on-demand entries",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node index.js",
+    "dev": "NODE_ENV=development webpack-dashboard -- node index.js",
+    "dev:norm": "NODE_ENV=development node index.js",
     "format": "prettier --write \"src/**/*.js\"",
     "serve": "serve -p 8080 dist",
     "build": "razzle build",
@@ -28,6 +29,7 @@
     "styled-components": "4.3.2",
     "url-loader": "^2.1.0",
     "webpack": "4.37.0",
+    "webpack-dashboard": "^3.1.0",
     "webpack-dev-server": "3.7.2",
     "webpack-hot-middleware": "~2.25.0",
     "webpack-node-externals": "^1.7.2",
@@ -51,6 +53,7 @@
     "react-loadable": "^5.5.0",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "serve": "^11.1.0"
+    "serve": "^11.1.0",
+    "unfetch": "^4.1.0"
   }
 }
