--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development webpack-dashboard -- node index.js",
-    "dev:norm": "NODE_ENV=development node index.js",
+    "dev:norm": "rm -rf dist/ && NODE_ENV=development node --inspect --trace-warnings index.js",
     "format": "prettier --write \"src/**/*.js\"",
     "serve": "serve -p 8080 dist",
     "build": "razzle build",
@@ -46,6 +46,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-styled-components": "1.10.6",
     "clean-webpack-plugin": "3.0.0",
+    "events": "^3.0.0",
     "html-webpack-plugin": "3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
